<resources>

    <string name="app_name">TrackProcess</string>

    <!-- StartActivity - activity_start -->
    <string name="btn_carregarDados">Carregar dados</string>
    <string name="btn_iniciarProcesso">Iniciar processo</string>
    <string name="txtView_dadosProcesso">Dados ficheiro csv:</string>
    <string name="colName_s1">S1,S2,S3,S4,S5,S6,S7,S8,C1,C2,C3,C4,C5,C6,C7,C8,Data</string>

    <!-- InstructionsActivity - activity_process -->
    <string name="textView7">
        \n
        \nExplicação do Processo 2 - Estação 5 no contexto da aplicação TrackProcess
        \n
        \n1º Passo: Carregar os dados;
        \n
        \n2º Passo: Iniciar processo;
        \n
        \n3º Passo: Visualização o processo a decorrer;
        \n
        \n4º Passo: Visualização de estatisticas.
        \nNota: O processo da linha de montagem é representado através de animações.
        \nUm tapete preto vai servir para que os cilindros rolem sobre o mesmo e existem 3 saidas possiveis com sensores especificos para cada cilindro:
        \nSensor para o cilindro Preto;
        \nSensor para cilindro Branco;
        \nSensor para cilindro de Metal;


    </string>
    <string name="textView3">Instruções</string>


    <!-- StatisticsActivity - activity_statisticsv -->
    <string name="btn_Estatisticas">Estatisticas</string>
    <string name="btn_sair">Sair</string>

</resources>
