<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.cm_project2.StartActivity"
    android:orientation="vertical">


    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/background" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="348dp"
        android:layout_height="42dp"

        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="34dp"
        android:layout_marginBottom="598dp"
        android:text="@string/txtView_dadosProcesso"
        android:textColor="@color/colorBlack"
        android:textSize="22sp" />

    <Switch
        android:id="@+id/btn_start"
        android:layout_width="wrap_content"
        android:layout_height="86dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="46dp"
        android:layout_marginBottom="220dp"
        android:text="@string/btn_iniciarProcesso"
        android:textColor="@color/colorBlack"
        android:textSize="18sp" />

    <Button
        android:id="@+id/btnAddData"
        android:layout_width="164dp"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="232dp"
        android:layout_marginBottom="238dp"
        android:text="@string/btn_carregarDados"
        android:background="@drawable/rounded_button_time"
        android:textColor="@color/colorWhite"/>

    <ListView
        android:id="@+id/listView"
        android:layout_width="298dp"
        android:layout_height="167dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="401dp"
        android:gravity="center"
        android:textSize="18sp">

    </ListView>

    <ProgressBar
        android:id="@+id/progressBar_timer"
        style="?android:attr/progressBarStyle"

        android:layout_width="67dp"
        android:layout_height="65dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="188dp"
        android:layout_marginBottom="101dp"
        android:visibility="invisible"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/textView_time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="211dp"
        android:layout_marginBottom="114dp"
        android:text="3"
        android:textColor="@color/colorBlack"
        android:textSize="30sp"
        android:visibility="invisible"
        tools:visibility="visible" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="156dp"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="167dp"
        android:layout_marginEnd="87dp"
        android:layout_marginBottom="679dp"
        android:fontFamily="@font/aclonica"
        android:text="@string/app_name"
        android:textAlignment="center"
        android:textColor="@color/colorBrown"
        android:textSize="18sp"
        android:textStyle="bold|italic" />

    <ImageView
        android:id="@+id/imageView6"
        android:layout_width="51dp"
        android:layout_height="55dp"
        android:layout_alignParentEnd="true"
        android:layout_alignParentBottom="true"
        android:layout_marginEnd="38dp"
        android:layout_marginBottom="666dp"
        android:src="@drawable/lu_ban_logo" />

</RelativeLayout>
